fixed wired scroll behavior on iPhone

--- a/src/scss/layout/_main.scss
+++ b/src/scss/layout/_main.scss
@@ -3,7 +3,7 @@
 main {
 	position: relative;
 	display: grid;
-	overflow-x: hidden;
+	overflow: hidden;
 	width: 100vw;
 	height: 100vh;
 	margin: 0;
